# bgraph

./: CMakeLists.txt  README.md
implementations/C/: abs.cc  pipe.cc  sum.cc
include/: BehaviorGraph.hpp  SoftwareGraph.hpp
src/: BehaviorGraph.cpp  CMakeLists.txt  SoftwareGraph.cpp  export_behavior_graph.cpp  gen_vhdl_entity.cpp  import_behavior_graph.cpp
test/: charlie_control.yml  def_bg_components.cpp  phaser.bg  testBG.cpp  testSWGraph.cpp
tools/: def_bg_components.cpp  def_task_graph.cpp  export_task_graph.cpp  gen_cpp_class.cpp  gen_vhdl_entity.cpp  import_behavior_graph.cpp  import_task_graph.cpp  query_graph.cpp
